--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,24 @@
+<html>
   <header>
-    <h1>Welcome to Twista!</h1>
-    <p><%= notice %></p>
+      <h1>Let's Twista!</h1>
+      <p><%= notice %></p>
   </header>
-  <br>
-  <br>
-  <footer>
+ 
+  <body>
+    <div class="link">
+    <%= link_to '新規投稿する！', new_post_path, class: "link" %>
+  </div>
     <table>
+    <% @posts.each do |post| %>
+      <tr><th colspan="3" class="th_label">内容</th></tr>
+      <tr><th colspan="3" class="th_content"><%= post.content %></th></tr>
       <tr>
-        <th>内容</th>
-        <th>オプション</th>
-      </tr>
-      <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.content %></td>
-        <td><%= link_to '詳細', post_path(post.id) %></td>
-        <td><%= link_to "編集", edit_post_path(post.id), data: { confirm: '本当に編集しても宜しいでしょうか？' } %></td>
-        <td><%= link_to '削除', post_path(post.id), method: :delete, data: { confirm: '本当に削除しても宜しいでしょうか？' } %></td>
+          <td><%= link_to '削除', post_path(post.id), method: :delete, data: { confirm: '本当に削除しても宜しいでしょうか？' }, class: "main_link" %></td>
+          <td><%= link_to '詳細', post_path(post.id), class: "main_link" %></td>
+          <td><%= link_to "編集", edit_post_path(post.id), data: { confirm: '本当に編集しても宜しいでしょうか？' }, class: "main_link" %></td>          
       </tr>
       <% end %>
     </table>
-  </footer>
-<br>
-<%= link_to '新規投稿へ！', new_post_path %>
-</body>
+    <br>
+  </body>
 </html>
