--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,22 +1,27 @@
-<h1>編集画面</h1>
-<%= form_with(model: @post, local: true) do |form|%>
-  <% if @post.errors.any? %>
+<header>
+  <h1>Let's Twista!</h1>
+    <h2>編集画面</h2>
+</header>
+
+<body>
+  <%= form_with(model: @post, local: true) do |form|%>
+   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= @post.errors.count %>件のエラーがあります。</h2>
       <ul>
-      <% @post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+    <% end %>
       </ul>
     </div>
   <% end %>
+</body>
 
   <div class="post_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
+    <%= form.label "投稿の内容を編集しましょう！", class:"form_label"%>
+    <%= form.text_field :content, class:"form_content" %>
   </div>
   <br>
-  <%= form.submit "登録する"%>
-  <%= form.submit "戻る", name: 'back' %>
-  
-<% end %>
+    <%= form.submit "登録する"%>
+    <%= form.submit "戻る", name: 'back' %>
+  <% end %>
