--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,22 +1,25 @@
-<h1>投稿画面</h1>
+<header>
+  <h1>Let's Twista!</h1>
+  <h2>新しい投稿</h2>
+</header>
 
-<h2>新しい投稿</h2>
 <%= form_with(model: @post, local: true, url:confirm_posts_path) do |form| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= @post.errors.count %>件のエラーがあります。</h2>
       <ul>
-      <% @post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
+<p>
   <div class="post_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
+    <p><%= form.label "今のお気持ちはいかがですか？", class:"form_label" %></p>
+    <%= form.text_field :content, class:"form_content"%>
   </div>
+</p>
   <br>
     <%= form.submit "登録する"%>
 <% end %>
