--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,16 +1,73 @@
+/*
+ *= require_tree .
+ */
+
 html {
     font-size: 100%;
     height: 100%;
+    background-color: #0099FF;
+    display: table;
+    margin: 0 auto;
+    text-align: center;
 }
  
 header {
-    background-color: rgba(175, 255, 255, 0.61);
-    height: 50px;
-    font-size: 1rem;
+    height: 100%;
+    font-size: 1.5rem;
+    color:white;
 }
 
-  footer{
-    width: 100%;
+table {
+    background-color: white;
     display: table;
-    background-color: rgba(215, 248, 182, 0.89);
+    margin: 0 auto;
+    width: 100%;
+    padding: 5%;
+    text-align: center;
+}
+
+.th_label {
+    line-height:30px;
+}
+
+.th_content {
+    font-size: 1rem;
+    color:grey;
+    line-height: 50px;
+    border: solid;
+}
+
+.main_link {
+    color: black;
+    text-decoration: none;   
+    line-height:30px;
+}
+
+.main_link:hover {
+    color: black;
+    text-decoration: underline;   
+}
+
+.link{
+    color:white;
+    text-decoration: none;    
+    text-align: right;
+    line-height: 30px;
+    text-shadow: 5px 5px 0 #000,
+}
+
+.link:hover {
+    color:white;
+    text-decoration: underline;    
+}
+
+.form_label {
+    font-size: 1.5rem;
+    line-height:50px;
+}
+
+.form_content{
+    width: 100%;
+    height: 100px;
+    overflow-wrap: anywhere;
 }
