エラー修正

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -18,8 +18,7 @@
 </body>
 
   <div class="post_content">
-    <%= form.label "投稿の内容を編集しましょう！", class:"form_label"%>
-    <%= form.text_field :content, class:"form_content" %>
+    <p><%= form.text_field :content, class:"form_content" %></p>
   </div>
   <br>
     <%= form.submit "登録する"%>
