--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
   </div>
     <table>
       <% @posts.each do |post| %>
-        <tr><th colspan="3" class="th_label">内容</th></tr>
+        <tr><th colspan="3" class="th_label"><%= post.created_at.to_s(:datetime) %></th></tr>
         <tr><th colspan="3" class="th_content"><%= post.content %></th></tr>
         <tr>
           <td><%= link_to '削除', post_path(post.id), method: :delete, data: { confirm: '本当に削除しても宜しいでしょうか？' }, class: "main_link" %></td>
