--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -12,7 +12,7 @@
       <% @blogs.each do |blog| %>
         <tr><th colspan="3" class="th_label"><%= blog.created_at.to_s(:datetime) %> by <%= blog.user.name %> </th></tr>
         <tr><th colspan="3" class="th_title">Title:&emsp;<%= blog.title %></th></tr>        
-        <tr><th colspan="3" class="th_image"><%= blog.image %></th></tr>
+        <tr><th colspan="3" class="th_image"><%= image_tag(blog.image.url) if blog.image && blog.image.url %></th></tr>
         <tr><th colspan="3" class="th_content"><%= blog.content %></th></tr>
         <tr>
           <td><%= button_to 'Delete', blog_path(blog.id), method: :delete, class: "button2" %></td>
