--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,27 +1,24 @@
 <h1>All Posts</h1>
 <div class="notifications">
- <div class="notice">
-  <p id="notice"><%= notice %></p>
+  <div class="notice">
+    <p id="notice"><%= notice %></p>
   </div>
 </div>
-
-<%= button_to 'Make new Post', new_blog_path, method: :get, class: "button3" %>
+<%= link_to 'Make new post', new_blog_path, class: 'link_blogs_index'%>
+<br>
 <br>
 <div class="table_frame">
   <table>
-      <% @blogs.each do |blog| %>
-        <tr><th colspan="3" class="th_label"><%= blog.created_at.to_s(:datetime) %> by <%= blog.user.name %> </th></tr>
-        <tr><th colspan="3" class="th_title">Title:&emsp;<%= blog.title %></th></tr>        
-        <tr><th colspan="3" class="th_image"><%= image_tag(blog.image.url) if blog.image && blog.image.url %></th></tr>
-        <tr><th colspan="3" class="th_content"><%= blog.content %></th></tr>
-        <tr>
-          <td><%= button_to 'Delete', blog_path(blog.id), method: :delete, class: "button2" %></td>
-
-          <td><%= button_to 'Detail', blog_path(blog.id),  method: :get, class: "button2" %></td>
-
-          <td><%= button_to "Edit", edit_blog_path(blog.id),  method: :get, class: "button2" %></td>          
-        </tr>
-      <% end %>
-    </table>
-  </div>
-
+    <% @blogs.each do |blog| %>
+      <tr><th colspan="3" class="th_label"><%= blog.created_at.to_s(:datetime) %> by <%= blog.user.name %> </th></tr>
+      <tr><th colspan="3" class="th_title">Title:&emsp;<%= blog.title %></th></tr>        
+      <tr><th colspan="3" class="th_image"><%= image_tag(blog.image.url) if blog.image && blog.image.url %></th></tr>
+      <tr><th colspan="3" class="th_content"><%= blog.content %></th></tr>
+      <tr>
+        <td><%= button_to 'Delete', blog_path(blog.id), method: :delete, class: "button2" %></td>
+        <td><%= button_to 'Detail', blog_path(blog.id),  method: :get, class: "button2" %></td>
+        <td><%= button_to "Edit", edit_blog_path(blog.id),  method: :get, class: "button2" %></td>          
+      </tr>
+    <% end %>
+  </table>
+</div>
