--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,42 @@
 <h1>Sign up</h1>
-<div class="errors">
+
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
-    <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
   </div>
 <% end %>
-</div>
-<%= form_with(model: @user, local: true) do |f| %>  
-  <p><%= f.label :name %></p>
-  <p><%= f.text_field :name %></p>
-
-  <p><%= f.label :email %></p>
-  <p><%= f.email_field :email %></p>
-
-  <p><%= f.label :password %></p>
-  <p><%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %></p>
-  <p><%= f.password_field :password_confirmation %></p>
-  <br>
-  <p><%= f.submit "Create my account" %></p>
-  <br>
-  <br>
+<%= form_with(model: @user, local: true) do |f| %>
+  <table>
+    <tr>
+      <td> <%= f.label :name %></td>
+      <td> <%= f.text_field :name %></td>
+    </tr>
+    <tr>
+      <td> <%= f.label :email %></td>
+      <td>
+        <%= f.email_field :email %></td>
+    </tr>
+    <tr>
+      <td> <%= f.label :password %></td>
+      <td> <%= f.password_field :password %></td>
+    </tr>
+    <tr>
+      <td> <%= f.label :password_confirmation %></td>
+      <td><%= f.password_field :password_confirmation %></td>
+    </tr>
+    <tr>
+      <td> <%= f.label :avatar %></td>
+      <td> <%= f.file_field :avatar %></td>
+      <td> <%= f.hidden_field :avatar_cache %></td>    
+    </tr>
+  </table>
+<%= f.submit "Create my account" %>
 <% end %>
+<%= button_to 'Back', blogs_path, method: :get, class: "button2" %>
+<br>
+
