プロフィール編集機能を追加

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,18 @@
-<h1>Editing User</h1>
-
+<h1>Edit my account</h1>
 <%= render 'form', user: @user %>
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+  <%= form_with(model: @user, local: true ) do |f| %>
+    <form class="login-container">
+      <p><%= f.label "Name" %></p>
+      <p><%= f.text_field :name %></p>
+      <p><%= f.label "Email" %></p>
+      <p><%= f.text_field :email %></p>
+      <p><%= f.label "Password"  %></p>
+      <p><%= f.password_field :password %></p>
+      <p><%= f.label "Password confirmation"  %></p>
+      <p><%= f.password_field :password_confirmation %></p>
+    <%# add avatar %>
+      <p><%= f.submit "Submit" %></p>
+    </form>
+    <% end %>
+<%= link_to 'Back', @user,class:"button2" %> 
+<br><br><br>
