--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,42 +1,20 @@
 <h1>Sign up</h1>
-
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-  </div>
-<% end %>
+<%= render 'form', user: @user %>
 <%= form_with(model: @user, local: true) do |f| %>
-  <table>
-    <tr>
-      <td> <%= f.label :name %></td>
-      <td> <%= f.text_field :name %></td>
-    </tr>
-    <tr>
-      <td> <%= f.label :email %></td>
-      <td>
-        <%= f.email_field :email %></td>
-    </tr>
-    <tr>
-      <td> <%= f.label :password %></td>
-      <td> <%= f.password_field :password %></td>
-    </tr>
-    <tr>
-      <td> <%= f.label :password_confirmation %></td>
-      <td><%= f.password_field :password_confirmation %></td>
-    </tr>
-    <tr>
-      <td> <%= f.label :avatar %></td>
-      <td> <%= f.file_field :avatar %></td>
-      <td> <%= f.hidden_field :avatar_cache %></td>    
-    </tr>
-  </table>
-<%= f.submit "Create my account" %>
+<p><%= f.label :name %></p>
+<p><%= f.text_field :name %></p>
+<p><%= f.label :email %></p>
+<p><%= f.email_field :email %></p>
+<p><%= f.label :password %></p>
+<p><%= f.password_field :password %></p>
+<p><%= f.label :password_confirmation %></p>
+<p><%= f.password_field :password_confirmation %></p>
+<p><%= f.label :avatar %></p>
+<p><%= f.file_field :avatar %></p>
+<p><%= f.hidden_field :avatar_cache %></p>
+<br> 
+<p><%= f.submit "Create my account" %></p>
 <% end %>
-<%= button_to 'Back', blogs_path, method: :get, class: "button2" %>
+<p><%= button_to 'Back', blogs_path, method: :get, class: "button2" %></p>
 <br>
 
