--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,14 @@
 <h1>Your Post</h1>
 <%= link_to 'Back', blogs_path %>
 
+<% unless @blog.user_id == current_user.id %>
+  <% if @favorite.present? %>
+    <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'お気に入りする', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
+
 <div class="table_frame">
   <table>
       <tr><th colspan="3" class="th_label">Created by <%= @blog.user.name %> </th></tr>
@@ -12,3 +20,5 @@
   </table>
 </div>
 <br>
+
+
