他者情報の編集制限

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,8 @@
 
 <%= button_to "My favourites", favorites_path, method: :get, class:"button3" %>
 <%= button_to "Edit my account", edit_user_path, method: :get, class:"button3" %>
+<%= button_to "All users", users_path, method: :get, class:"button3" %>
+
 
 
 
