--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,9 +13,11 @@
       <tr><th colspan="3" class="th_image"><%= image_tag(blog.image.url) if blog.image && blog.image.url %></th></tr>
       <tr><th colspan="3" class="th_content"><%= blog.content %></th></tr>
       <tr>
+      <% if current_user.id == blog.user.id %>
         <td><%= button_to 'Delete', blog_path(blog.id), method: :delete, class: "button2" %></td>
+        <td><%= button_to "Edit", edit_blog_path(blog.id),  method: :get, class: "button2" %></td>
+      <% end %>          
         <td><%= button_to 'Detail', blog_path(blog.id),  method: :get, class: "button2" %></td>
-        <td><%= button_to "Edit", edit_blog_path(blog.id),  method: :get, class: "button2" %></td>          
       </tr>
     <% end %>
   </table>
