--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,26 +9,27 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Password digest</th>
       <th>Email</th>
       <th>Icon</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= user.password_digest %></td>
         <td><%= user.email %></td>
         <td><%= user.icon %></td>
+          <% if current_user.id == user.id %>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>          
       </tr>
     <% end %>
   </tbody>
 </table>
 <br>
-<%= link_to 'New User', new_user_path %>
+<%= button_to 'New User', new_user_path , method: :get, class:"button3" %>
+<%= button_to 'Back to all posts', blogs_path , method: :get, class:"button3" %>
 <br>
