--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Blog</h1>
-<%= link_to 'Back', blogs_path %>
+<%= link_to 'Back', blogs_path, class: "button3"  %>
 <br>
 <br>
 <%= render 'form', blog: @blog %>
