--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,5 +16,5 @@
       <p><%= f.submit "Submit" %></p>
     </form>
     <% end %>
-<%= link_to 'Back', @user,class:"button2" %> 
+<%= link_to 'Back', user_path(current_user.id),class:"button2" %> 
 <br><br><br>
