--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,6 @@
 <br> 
 <p><%= f.submit "Create my account" %></p>
 <% end %>
-<p><%= button_to 'Back', blogs_path, method: :get, class: "button2" %></p>
+<%= link_to 'Back', @user,class:"button2" %> 
 <br>
 
