他人のプロフィールへのアクセス制限

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -6,19 +6,16 @@ body {
 }
 
 .th_title{
-    font-style: italic;
     color: rgb(129, 120, 120);
+    text-align: center;
 }
 
 .th_label{
-    font-style: italic;
 }
 
 .th_content{
     padding-top: 10px;
-    font-style: italic;
-    text-align: left;
-    font-weight: bold;
+    text-align: center;
     color: rgb(129, 120, 120);
 }
 
