--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -27,10 +27,8 @@
 
     border-radius: 0.75rem;
     border: 1px solid transparent;
-    color: #dc2743;
+    color: #f09433;
     font-size: 0.75rem;
-    font-style: italic;
-
     line-height: 20px;
     font-weight: bold;
     text-align: center;
@@ -55,8 +53,6 @@
     border: 1px solid transparent;
     color: #dc2743;
     font-size: 1rem;
-    font-style: italic;
-
     line-height: 30px;
     font-weight: bold;
     text-align: center;
