--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,7 +9,7 @@
 <div class="table_frame">
   <table>
     <% @blogs.each do |blog| %>  
-        <tr><th colspan="3" class="th_label"><%= blog.created_at.to_s(:datetime) %> by <%= blog.user.name %> </th></tr>     
+        <tr><th colspan="3" class="th_label"> <%= image_tag blog.user.avatar.variant(resize:'30x30').processed , class: "avatar-index rounded-circle mx-auto" %> <%= blog.user.name %> created at <%= blog.created_at.to_s(:datetime) %></th></tr>     
         <tr><th colspan="3" class="th_title">Title:&emsp;<%= blog.title %></th></tr>
         <td></td><td></td>
         <% unless blog.user_id == current_user.id %>
